--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ body
 
 #myBtnContainer
 {
-    margin: 0 calc((100vw - 198px) / 2);
+    margin: 0 calc((100vw - 224px) / 2);
     margin-bottom: 30px;
 }
 
@@ -146,6 +146,8 @@ body
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
     outline: none !important;
+    padding: 2px 12px;
+    margin: 0 5px;
 }
 
 .myActive
